src/objects/objectB1__c.object
<CustomObject>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>email__c</fullName>
        <label>email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>phone__c</fullName>
        <label>phone</label>
        <type>Phone</type>
    </fields>
    <label>objectB</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>objectB Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>objectB</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>